create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-rDlZOXTSbm mbr-fullscreen mbr-parallax-background" id="header2-2">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-rDlZOXTSbm mbr-fullscreen mbr-parallax-background" id="header2-2">
 
     
 
@@ -198,7 +198,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
                             YOGA</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Baskın ya da bozulmaya sebep olabilen doshanıza özel olarak düzenlenmiş <br><strong>bir saatlik bireysel yoga dersidir.</strong> <br><br>Minimum 4 dersle başlanıp, istek ve ihtiyaca göre arttırılabilmektedir. <br><br><strong>Nefes egzersizleri, </strong><br><br><strong>beden hareketleri, </strong><br><strong><br></strong><br><strong>meditasyon ve </strong><br><br><strong>gevşeme çalışmalarını</strong> içerir.*&nbsp;<br><br>(*) <em>Talebe göre terapi programına dahil edilmektedir.</em></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Baskın ya da bozulmaya sebep olabilen doshanıza özel olarak düzenlenmiş <br><strong>bir saatlik bireysel yoga dersidir.</strong> <br><br>Minimum 4 dersle başlanıp, istek ve ihtiyaca göre arttırılabilmektedir. *<br><br><strong>Nefes egzersizleri, </strong><br><br><strong>beden hareketleri, </strong><br><strong><br></strong><strong>meditasyon ve </strong><br><br><strong>gevşeme çalışmalarını</strong> içerir.&nbsp;<br><br>(*) <em>Talebe göre terapi programına dahil edilmektedir.</em></p>
                     </div>
                 </div>
             </div>
