--- a/page2.html
+++ b/page2.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section once="footers" class="cid-rDmM4J2veH" id="footer7-f">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section once="footers" class="cid-rDmM4J2veH" id="footer7-f">
 
     
 
