create github pages

--- a/page1.html
+++ b/page1.html
@@ -22,6 +22,7 @@
   
   
   
+
 </head>
 <body>
   <section class="menu cid-rDlZo7ZxqE" once="menu" id="menu2-9">
@@ -60,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="cid-rDmpC2w4fh mbr-fullscreen mbr-parallax-background" id="header2-a">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="cid-rDmpC2w4fh mbr-fullscreen mbr-parallax-background" id="header2-a">
 
     
 
@@ -118,5 +119,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
+
 </body>
 </html>
