--- a/page2.html
+++ b/page2.html
@@ -22,6 +22,7 @@
   
   
   
+
 </head>
 <body>
   <section class="menu cid-rDlZo7ZxqE" once="menu" id="menu2-b">
@@ -60,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section once="footers" class="cid-rDmM4J2veH" id="footer7-f">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section once="footers" class="cid-rDmM4J2veH" id="footer7-f">
 
     
 
@@ -90,5 +91,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
+
 </body>
 </html>
