create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="cid-rDlZOXTSbm mbr-fullscreen mbr-parallax-background" id="header2-2">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="cid-rDlZOXTSbm mbr-fullscreen mbr-parallax-background" id="header2-2">
 
     
 
@@ -225,7 +225,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
                             PAKET PROGRAMLAR</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">• Ön görüşme ve İyi Yaşama Programı<br>• Ayurvedik terapi uygulaması (tek seans)<br>&nbsp;• Bayurvedik Terapi Uygulaması (tek seans)<br>&nbsp;• Ön görüşme ve İyi Yaşama Programı<br>+3 Terapi + 4 yoga dersi&nbsp;<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">• Ön görüşme ve İyi Yaşama Programı<br>• Ayurvedik terapi uygulaması (1-5 seans)<br>&nbsp;• Bayurvedik Terapi Uygulaması (1-5 seans)<br>&nbsp;• Ön görüşme ve İyi Yaşama Programı<br>+3 Terapi + 4 yoga dersi&nbsp;<br></p>
                     </div>
                 </div>
             </div>
