--- a/page2.html
+++ b/page2.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFxeociQZI" id="gallery3-h">
+<section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFxeociQZI" id="gallery3-h">
 
     
 
