create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rDlZOXTSbm mbr-fullscreen mbr-parallax-background" id="header2-2">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-rDlZOXTSbm mbr-fullscreen mbr-parallax-background" id="header2-2">
 
     
 
@@ -119,7 +119,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/oil-massage-1-1505x1000.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/001-676x507.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
@@ -133,7 +133,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/fff-1-2000x1333.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/005-676x507.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
@@ -147,7 +147,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/kati-basti-for-low-back-ache-600x400.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/004-676x507.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
@@ -174,7 +174,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1-1920x1280.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/003-676x507.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>İYİ YAŞAMA PROGRAMI</strong></h4>
@@ -186,7 +186,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/adme-accessbars3-1-900x447.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/006-676x507.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>ACCESS BARS</strong></h4>
@@ -198,7 +198,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/mbr-800x500.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/002-676x507.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
@@ -224,7 +224,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/3-1046x654.jpeg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
+                        <img src="assets/images/007-756x328.jpg" alt="aslı_can_canlife_studio" title="aslı_can_canlife_studio">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
