--- a/asli_can_galeri.html
+++ b/asli_can_galeri.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFxeociQZI" id="gallery3-h">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rFxeociQZI" id="gallery3-h">
 
     
 
