create github pages

--- a/asli_can.html
+++ b/asli_can.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="cid-rDmpC2w4fh mbr-fullscreen mbr-parallax-background" id="header2-a">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rDmpC2w4fh mbr-fullscreen mbr-parallax-background" id="header2-a">
 
     
 
@@ -78,7 +78,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7"><em><br><br><br><br><br><br></em><br><br><em>2002 yılından beri vermekte olduğum yoga derslerime, 2013 yılında, sözlü geleneğin en kıymetli öğreticilerinden <strong>Ferhan Yüksel</strong>'le öğrenmeye başlayıp, <strong>Arya Vaidya Pharmacy Enstitüsü</strong> ve <strong>Dr. Somit Kumar</strong> ve <strong>Dr. Dinnil Paul</strong> ile devam etmekte olduğum ayurvedik disiplini de entegre etmekteyim.
 <br>
-<br>3 yıldır <strong>"İyi Yaşama Programı"</strong> adını verdiğim, kendi oluşturduğum bir sistemle 1, 3 ve/veya 5 günlük, bireysel terapi + inziva programları yapmaktayım.
+<br>5 yıldır <strong>"İyi Yaşama Programı"</strong> adını verdiğim, kendi oluşturduğum bir sistemle 1, 3 ve/veya 5 günlük, bireysel terapi + inziva programları yapmaktayım.
 <br>
 <br>Düzenli yoga ve ayurveda çalışmalarımı yaşadığım şehir olan Ankara'da devam ettirmekle birlikte, sırt çantamla gidebileceğim her yerde <strong>Hipokrat'tan İbni Sina'ya Sağlık ve Hastalık</strong> Söyleşilerini ve <strong>Can, Nefs ve Nefes Atölyelerini</strong> yapmaktayım.
 <br>
